# mintalib

./: .envrc  .gitattributes  .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  MANIFEST  MANIFEST.in  README.md  WORKFLOW.md  justfile  makefile  noxfile.py  pyproject.toml  setup.cfg  setup.py  tasks.py  tox.ini  tox.toml
.claude/: CLAUDE.md
archive/: function-proto.ipynb  make-functions-old.ipynb  make-functions.ipynb  make-indicators-class.ipynb  make-indicators.ipynb  makefile  mintalib-accessors.ipynb  mintalib-expressions.ipynb  mintalib-polars.ipynb  mintalib-proto.ipynb  reflib.py  setup.py  system-flags.py  test-reflib.ipynb  tox.ini  trade.pxi  update-docs.ipynb
archive/docs/: index.md  (+2 more)
docs/: README.md  _config.yml  cython-checks-impact.md  index.html  index.md  indicator-bridge-proposal.md  indicator-narrowing-proposal.md  indicators-narrowing.md  min-max-improvement.md  mintalib.core.md  mintalib.expressions.md  mintalib.functions.md  mintalib.html  mintalib.indicators.md  mintalib.md  mplchart-stopgap.md  narrowing-plan.md  readme.md  search.js  sma-loop-improvement.md
examples/: INDEX.md  README.md  __helper__.py  bbands-indicator.ipynb  bolling-bands.ipynb  bollinger-bands.ipynb  chart-example.ipynb  chart-helper.ipynb  clag-indicator.ipynb  core-module.ipynb  curve-indicator.ipynb  expressions.ipynb  function-examples.ipynb  functions-examples.ipynb  functions.ipynb  hma-indicator.ipynb  indicator-examples.ipynb  indicators-examples.ipynb  indicators.ipynb  keltner-channel.ipynb  keltner-channels.ipynb  keltner-examplel.ipynb  keltner-indicator.ipynb  mintalib-accessors.ipynb  mintalib-bbands.ipynb  mintalib-core.ipynb  mintalib-expressions.ipynb  mintalib-funcs.ipynb  mintalib-functions.ipynb  mintalib-help.ipynb  mintalib-indicators.ipynb  mintalib-keltner.ipynb  mintalib-opers.ipynb  mintalib-pandas.ipynb  mintalib-polars.ipynb  mintalib-psar.ipynb  mintalib-testing.ipynb  mintalib-utils.ipynb  pandas-accessor.ipynb  pandas-assign.ipynb  (+18 more)
experiments/: filter-vs-vector.ipynb
extras/: mintalib-core.ipynb  mintalib-testing.ipynb  reflib.py  test-ema.ipynb  test-mad.ipynb  test-min.ipynb  test-rma.ipynb  test-roc.ipynb  test-sma.ipynb  test-stdev.ipynb  test-sum.ipynb  test-wma.ipynb
meta/: mfi-buffer-improvement.md  sma-loop-improvement.md  tox.toml
misc/: accessor-proto.ipynb  core-functions.ipynb  cython-proto.ipynb  func-indicator-proto.ipynb  functions-import.ipynb  indicator-repr.ipynb  inspect-signature.ipynb  make-functions.ipynb  make-indicators-class.ipynb  make-indicators-func.ipynb  make-indicators.ipynb  mintalib-help.ipynb  mintalib-pandas.ipynb  mintalib-polars.ipynb  pipe-operator.ipynb  polars-experiments.ipynb  pretty-print.ipynb  random-prices.ipynb  sample-cython.ipynb  sample-prices.ipynb  test-functions.ipynb  test-indicators.ipynb  update-readme.ipynb  update-samples.ipynb
miscellanous/: accessor-proto.ipynb  bbands-indicator.ipynb  core-functions.ipynb  curve-indicator.ipynb  curve-proto.ipynb  cython-proto.ipynb  docs-proto.md  exec-module.ipynb  expression-proto.ipynb  extension-proto.ipynb  function-proto.ipynb  indicator-repr.ipynb  ipynb-history.ipynb  keltner-indicator.ipynb  make-functions.ipynb  mintalib-expressions.ipynb  mintalib-help.ipynb  mintalib-polars.ipynb  polars-experiments.ipynb  sample-prices.ipynb  sar-indicator.ipynb  slope-proto.ipynb  study-prototype.ipynb  test-indicators.ipynb  wrapper-proto.ipynb
notes/: pandas-expressions.md  paramspec-proposal.md  pdoc-module-fix.md
output/: README.md  coverage.md  indicators.html  indicators.md  pypi-readme.md  readme-fold.md
playground/: curve-proto.ipynb  filter-vs-vector.ipynb  format-partial.ipynb  indicator-repr.ipynb  pandas-accessor.ipynb  polars-accessor.ipynb  quick-study.ipynb  random-prices.ipynb  sample-prices.ipynb  slope-proto.ipynb
prototypes/: cython-proto.ipynb  format-partial.ipynb  pipe-operator.ipynb
scripts/: benchmark-vs-talib.py  code-analysis.ipynb  config.py  expressions-proto.ipynb  functions-import.ipynb  indicators-proto.ipynb  make-api-docs.py  make-coverage.py  make-docs.ipynb  make-expressions.ipynb  make-expressions.py  make-funcs.ipynb  make-functions.ipynb  make-functions.py  make-indicators-old.ipynb  make-indicators.ipynb  make-indicators.py  make-newfuncs.ipynb  make-newindics.ipynb  make-opers.ipynb  make-sample.ipynb  make-stubs.py  make-wrappers.ipynb  make_docs.py  mintalib-testing.ipynb  process-readme.ipynb  process-readme.py  project.py  relative-import.ipynb  test-core.ipynb  test-functions.ipynb  test-indicators.ipynb  testing-proto.ipynb  update-docs.ipynb  update-readme.ipynb  update-readme.py  update-samples.ipynb  update-samples.py
scripts 2/: make-opers.ipynb  sample-prices.ipynb
tasks/: __init__.py
tests/: test-core.ipynb  test-ema.ipynb  test-sma.ipynb  test_concurrency.py  test_core.py  test_ema.py  test_expressions.py  test_fixtures.py  test_funcs.py  test_functions.py  test_indicators.py  test_mad.py  test_max.py  test_min.py  test_mintalib.py  test_opers.py  test_parametrize.py  test_regression.py  test_rma.py  test_roc.py  test_sma.py  test_stdev.py  test_sum.py  test_talib_parity.py  test_utils.py  test_vs_talib.py  test_wma.py
(+164 files in other folders)
