[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mintalib"
version = "0.0.25"
readme = "output/pypi-readme.md"
license = { text = "MIT License" }
requires-python = ">=3.10"
description = "Minimal Technical Analysis Library for Python"
urls.homepage = "https://github.com/furechan/mintalib"
authors = [{ name = "Furechan", email = "furechan@xsmail.com" }]
dependencies = ["numpy", "pandas"]
optional-dependencies.polars = ["polars"]
keywords = ["cython", "technical-analysis", "indicators"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[dependency-groups]
dev = [
    "setuptools",
    "cython",
    "invoke",
    "ipykernel",
    "pytest",
    "nbmake",
    "pyright",
    "mypy",
    "polars",
    "yfinance",
    "matplotlib",
    "mplfinance",
    "toml",
    "nbcheck",
    "nbfixme",
    "tabulate",
    "twine",
    "nbmask",
    "pyarrow",
    "pdoc>=15.0.1",
    "pytest-sugar>=1.0.0",
]

[tool.uv]
python-preference = "managed"

[tool.pytest.ini_options]
addopts = ["-p no:cacheprovider"]
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["F401", "F811"]
"__init__.py" = ["F401"]
"functions.py" = ["F401"]

[tool.pydev]
allow-publish = true 
