[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mintalib"
version = "0.0.33"
requires-python = ">=3.10"
readme = "output/pypi-readme.md"
license = "MIT"
license-files = ["LICENSE.txt"]
description = "Minimal Technical Analysis Library for Python"
urls.homepage = "https://github.com/furechan/mintalib"
authors = [{ name = "Furechan", email = "furechan@xsmail.com" }]
dependencies = [
    "numpy",
    "pandas>=2.3.3",
]
optional-dependencies.polars = ["polars"]
optional-dependencies.pandas = ["pandas"]
keywords = ["cython", "technical-analysis", "indicators"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[dependency-groups]
dev = [
    "setuptools",
    "cython",
    "invoke",
    "ipykernel",
    "pytest",
    "nbmake",
    "pyright",
    "mypy",
    "ruff",
    "pandas",
    "polars",
    "yfinance",
    "matplotlib",
    "mplfinance",
    "toml",
    "twine",
    "nbmask",
    "nbcheck",
    "nbfixme",
    "pyarrow",
    "tabulate",
    "pdoc>=15.0.1",
    "pytest-sugar>=1.0.0",
    "ta-lib>=0.6.8",
]

[tool.pytest.ini_options]
addopts = ["-p no:cacheprovider"]
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["F401", "F811"]
"__init__.py" = ["F401"]
"functions.py" = ["F401"]
# Names like `core`, `wrap_*`, `IntoExpr` are introduced via exec(PRELUDE) — not visible to ruff
"scripts/make-functions.ipynb" = ["F821"]
"scripts/make-indicators.ipynb" = ["F821"]
"scripts/make-expressions.ipynb" = ["F821"]

# Generated files use decorator-replaces-body pattern (e.g. @wrap_expression): empty stubs are intentional
[[tool.ty.overrides]]
include = [
    "src/mintalib/functions.py",
    "src/mintalib/indicators.py",
    "src/mintalib/expressions.py",
]
rules.empty-body = "ignore"

# Codegen notebooks exec a PRELUDE string that defines names like `core`, `wrap_*`, `IntoExpr`
# ty cannot see names introduced via exec(), so unresolved-reference is a false positive here
[[tool.ty.overrides]]
include = [
    "scripts/make-functions.ipynb",
    "scripts/make-indicators.ipynb",
    "scripts/make-expressions.ipynb",
]
rules.unresolved-reference = "ignore"
rules.empty-body = "ignore"

# `ts` is a dynamic polars namespace registered via @pl.api.register_expr_namespace
# ty cannot resolve dynamically registered accessors on pl.Expr
[[tool.ty.overrides]]
include = ["examples/experimental/polars-accessor.ipynb"]
rules.unresolved-attribute = "ignore"

[tool.pydev]
allow-publish = true 
